fixed spacing issue with absent scroll bars

--- a/src/app/content-scroll/content-scroll.component.css
+++ b/src/app/content-scroll/content-scroll.component.css
@@ -38,9 +38,20 @@
 }
 
 .content {
+    padding: .2em;
     display: flex;
     position: absolute;
     flex-grow: 1; 
+}
+
+.noVerticalScroll::-webkit-scrollbar:vertical {
+    height: 0;
+    width: 0;
+}
+
+.noHorizontalScroll::-webkit-scrollbar:horizontal {
+    height: 0;
+    width: 0;
 }
 
 .verticalScrollArea {
